update article link + error fixed + haiku link

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@ Digital design has changed because of the <del >advanced</del><ins>change of</in
 </ul>
 </section>
 
+<hr>
+
+<h4><a href="https://nghiaphan8297.github.io/html-haiku/index.html">Check out my HTML5 haiku</a></h3>
+
 
 </body>
 </html>
