--- a/html-haiku/index.html
+++ b/html-haiku/index.html
@@ -33,7 +33,7 @@
 	But to change and be better<br>
 	Know what's your mistake
 	</p>
-	
+
 	<hr>
 	<h4>The Design of HTML5</h4>
 	<p class="haiku" id="design">
@@ -41,7 +41,7 @@
 	We make our life easier<br>
 	By simplify things
 	</p>
-	
+
 	<hr>
 	<h4>Rich Media</h4>
 	<p class="haiku" id="Media">
@@ -49,15 +49,15 @@
 	Video and audio<br>
 	Need many plug-in
 	</p>
-	
+
 	<hr>
-	<h4>Web Forms 2.0</h4>		
+	<h4>Web Forms 2.0</h4>
 	<p class="haiku" id="webform">
 	Web forms two dot o<br>
 	Is the very descendant<br>
 	Of the JavaScript
 	</p>
-	
+
 	<hr>
 	<h4>Semantics</h4>
 	<p class="haiku" id="Semantics">
@@ -65,20 +65,23 @@
 	Corner store or a Walmart<br>
 	Probably Walmart?
 	</p>
-	
+
 	<hr>
-	<h4>Using HTML5 Today</h4>		
+	<h4>Using HTML5 Today</h4>
 	<p class="haiku" id="html5today">
 	Error in your codes?<br>
 	Smug nerd validator here<br>
 	Laughing at your work
 	</p>
-	
+
 	<hr>
 	<p>
 	<a href="#top">Back to Top</a>
 	</p>
-	
+
+	<hr>
+	<h4><a href="https://nghiaphan8297.github.io/index.html"> Have Design Become Too Hard?</a></h4>
+
 	</main>
 	</body>
 </html>
