--- a/html-haiku/index.html
+++ b/html-haiku/index.html
@@ -7,80 +7,90 @@
 		<!--[if IE]>
  		<script src="html5shiv-printshiv.min.js"></script>
 		<![endif]-->
+
+		<link rel="stylesheet" href="https://nghiaphan8297.github.io/html-haiku/css/screen.css">
+
+		<!-- Embedded or Internal Style (Stylesheet) -->
+
+		<style>
+
+		/* Embedded or Internal Style (Stylesheet) */
+
+		</style>
 	</head>
 	<body>
 	<noscript>JavaScript is disabled. Please re-enable JaveScript to for an enhanced experience.</noscript>
 	<header>
-		<h1>HTML5 Haiku</h1>
-		<h2>By Neil Phan</h2>
+		<h1 class="margin0">HTML5 Haiku</h1>
+		<h2 class="margin0">By Neil Phan</h2>
 	</header>
 	<nav>
-	<h2 hidden>Table of Contents</h2>
+	<h2> Table of Contents</h2>
 		<ol>
 			<li> <a href="#history"> A Brief History of Markup </a> </li>
 			<li> <a href="#design"> The Design of HTML5 </a> </li>
-			<li> <a href="#Media"> Rich Media </a> </li>
+			<li> <a href="#media"> Rich Media </a> </li>
 			<li> <a href="#webform"> Web Forms 2.0 </a> </li>
-			<li> <a href="#Semantics"> Semantics </a> </li>
+			<li> <a href="#semantics"> Semantics </a> </li>
 			<li> <a href="#html5today"> Using HTML5 Today </a> </li>
 		</ol>
 	</nav>
 	<main>
 	<hr>
-	<h4>A Brief History of Markup</h4>
-	<p class="haiku" id="history">
+	<h4 class="pretty" id="history">A Brief History of Markup</h4 class="pretty">
+	<p class="haiku">
 	We all need to change<br>
 	But to change and be better<br>
 	Know what's your mistake
 	</p>
 
 	<hr>
-	<h4>The Design of HTML5</h4>
-	<p class="haiku" id="design">
+	<h4 class="pretty" id="design">The Design of HTML5</h4 class="pretty">
+	<p class="haiku">
 	From long time ago<br>
 	We make our life easier<br>
 	By simplify things
 	</p>
 
 	<hr>
-	<h4>Rich Media</h4>
-	<p class="haiku" id="Media">
+	<h4 class="pretty" id="media">Rich Media</h4 class="pretty">
+	<p class="haiku">
 	A rich media<br>
 	Video and audio<br>
 	Need many plug-in
 	</p>
 
 	<hr>
-	<h4>Web Forms 2.0</h4>
-	<p class="haiku" id="webform">
+	<h4 class="pretty" id="webform">Web Forms 2.0</h4 class="pretty">
+	<p class="haiku">
 	Web forms two dot o<br>
 	Is the very descendant<br>
 	Of the JavaScript
 	</p>
 
 	<hr>
-	<h4>Semantics</h4>
-	<p class="haiku" id="Semantics">
+	<h4 class="pretty" id="semantics">Semantics</h4 class="pretty">
+	<p class="haiku">
 	What would be better?<br>
 	Corner store or a Walmart<br>
 	Probably Walmart?
 	</p>
 
 	<hr>
-	<h4>Using HTML5 Today</h4>
-	<p class="haiku" id="html5today">
+	<h4 class="pretty" id="html5today">Using HTML5 Today</h4 class="pretty">
+	<p class="haiku">
 	Error in your codes?<br>
 	Smug nerd validator here<br>
 	Laughing at your work
 	</p>
 
 	<hr>
-	<p>
+	<p class="middle">
 	<a href="#top">Back to Top</a>
 	</p>
 
 	<hr>
-	<h4><a href="https://nghiaphan8297.github.io/index.html"> Have Design Become Too Hard?</a></h4>
+	<h4 class="middle"><a href="https://nghiaphan8297.github.io/index.html"> Have Design Become Too Hard?</a></h4 class="pretty">
 
 	</main>
 	</body>
