--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="exercises">
 <h3>Exercises</h3>
 <ul>
-<li><a href="html5-haiku-single-page/index.html">HTML5 Haiku</a></li>
+<li><a href="html-haiku/index.html">HTML5 Haiku</a></li>
 <li><a href="html-document/index.html">HTML Document (for screen &amp; print)</a></li>
 <li><a href="#">Coming soon</a></li>
 </ul>
