--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <ul>
 <li><a href="html-haiku/index.html">HTML5 Haiku</a></li>
 <li><a href="html-document/index.html">HTML Document (for screen &amp; print)</a></li>
-<li><a href="#">Coming soon</a></li>
+<li><a href="tnr/index.html">Times New Roman</a></li>
 </ul>
 </section>
 </body>
