--- a/tnr/index.html
+++ b/tnr/index.html
@@ -16,7 +16,7 @@
       <li><a href="#abh"> A Brief History</a></li>
       <li><a href="#origin">Origin</a></li>
       <li><a href="#crit"> Criticism</a></li>
-      <li><a href="#cre"> Credit</a></li>
+      <li><a href="#bottom"> Credit</a></li>
 
     </ul>
   </nav>
@@ -108,7 +108,7 @@
        <div class="border4 ct size6">
        <h5><a href="#"> Back to top</a></h5>
        </div>
-  <address>
+  <address id="bottom">
 <h3>By Neil Phan</h3>
 <dl>
 <dt>Web Authoring</dt>
