--- a/tnr/index.html
+++ b/tnr/index.html
@@ -16,7 +16,7 @@
       <li><a href="#abh"> A Brief History</a></li>
       <li><a href="#origin">Origin</a></li>
       <li><a href="#crit"> Criticism</a></li>
-      <li><a href="#bottom"> Credit</a></li>
+      <li><a href="#bottom"> Bottom</a></li>
 
     </ul>
   </nav>
