--- a/tnr/index.html
+++ b/tnr/index.html
@@ -51,7 +51,7 @@
 
      </div>
      <div id="abh" class="border3 ">
-  <h3>A Brief History</h3>
+       <h3><a href="#abh">A Brief History</a></h3>
        <img alt="placeholder image" src="http://typographyforlawyers.com/images/tally-of-types.jpg">
 
    <p class="lh1">
@@ -72,7 +72,7 @@
 
      <div  id="origin" class="border3 mg1">
 
-  <h3>Origin</h3>
+       <h3><a href="#origin">Origin</a></h3>
 
 
   <p class="lh1">The origin of the font is abit of a mystery.
@@ -93,7 +93,7 @@
        </div>
 
   <div id="crit" class="border3">
-     <h3 >Criticism</h3>
+    <h3 ><a href="#crit">Criticism</a></h3>
       <p class="lh1">Despite its success, Times New Roman recieved many
       criticisms. There's not much to complain about Times
       New Roman, as it is a general font that is created
