--- a/tnr/index.html
+++ b/tnr/index.html
@@ -109,7 +109,7 @@
        <h5><a href="#"> Back to top</a></h5>
        </div>
   <address id="bottom">
-<h3>By Neil Phan</h3>
+<span>By Neil Phan</span>
 <dl>
 <dt>Web Authoring</dt>
 <dd>Justin Gagne</dd>
