--- a/index.html
+++ b/index.html
@@ -1,39 +1,87 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Web Authoring 1 / Projects / Neil Phan</title>
-<meta name="author" content="Nghia(Neil) Phan">
-
-
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/screen.css">
+  <title>Nghia Phan</title>
 </head>
-
 <body>
 
-<header>
-	<h1>Web Authoring 1 Projects &amp; Exercises</h1>
-	<h2>By Neil Phan</h2>
-</header>
+  <div class="one">Nghia Phan</div>
 
-<section id="projects" hidden>
-<h3>Projects</h3>
-<ul>
-<li><a href="">HTML5 Haiku</a></li>
-<li><a href="">HTML Document (for screen &amp; print)</a></li>
-<li><a href="#">Coming soon</a></li>
-</ul>
-</section>
+  <div class="layout-1">
+<img alt="striped-background" src="picture/maxresdefault2.jpg">
+</div>
 
-<section id="exercises">
-<h3>Exercises</h3>
-<ul>
-<li><a href="html-haiku/index.html">HTML5 Haiku</a></li>
-<li><a href="html-document/index.html">HTML Document (for screen &amp; print)</a></li>
-<li><a href="tnr/index.html">Times New Roman</a></li>
-</ul>
-</section>
+  <div class="four"><a href="#">
+    <div class="four2"></div>
+    <div class="four3">NP</div>
+    </a></div>
+
+    <div class="two"><a href="#about">
+    <div class="two2">About</div>
+     <div class="two3"></div>
+    </a></div>
+
+    <div class="seven"><a href="#works">
+    <div class="seven2">Works</div>
+     <div class="seven3"></div>
+    </a></div>
+
+ <h2 class="hello">Hello!</h2>
+  <div>
+  <p class="hello"> My name is Nghia Phan and I am an animator. I'm nineteen year old and currently in my second year of college. I just took a web authoring class this semester and here what I got, welcome to my little website.</p>
+  <div class="hello1"></div>
+
+<h2 id="works">Works</h2>
+
+
+<h3 class="hello2-1">Web authoring</h3>
+
+<p class="hello2-2"> <a href="https://nghiaphan8297.github.io/html-haiku/index.html">Haiku</a> - <a href="https://nghiaphan8297.github.io/tnr/index.html">Font Website</a> - <a href="Code Drawing/index.html">Code Drawing</a> - <a href="Code Animation/index.html">Code Animation</a></p>
+
+<img class="work" alt="times new roman" src="picture/tally-of-types.jpg">
+
+   <div class="one"></div>
+
+
+
+     <h3 class="hello3-1">Animation </h3>
+     <p class="hello2-2"> <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gb050YmhseUhGb1k">3D Interactive<a> - <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gVmotN09TUXRwOFE">Ocean Gyre</a></p>
+
+
+
+
+  <img class="work" alt="game world" src="picture/Untitled.png">
+
+   <div class="one"></div>
+
+
+      <h3 class="hello4-1">Others</h3>
+      <p class="hello2-2"> <a href="https://cdn.discordapp.com/attachments/255975014434603008/258130600639201281/image.jpg">Still Life</a> - <a href="https://cdn.discordapp.com/attachments/255975014434603008/258130600894922752/image3.jpg">Portrait</a> - <a href="https://cdn.discordapp.com/attachments/255975014434603008/258130637532168193/image1.jpeg">Katana</a></p>
+
+
+
+  <img class="work" alt="Drawing" src="picture/Untitled3.png">
+
+
+
+
+  <h2 id="about">About</h2>
+
+  <p class="big">I am an international student from Vietnam. Where I come from - Vietnam, doesn't offer great educations and oppotunities in art. So I decided to study abroad - I left my country at the age of fifteen.</p>
+
+  <p class="big">I had high school in Massachusetts, U.S and went to Montserrat College of Art - in the same state. I'm a second-year-college-student and currently working as an animator. I also take interest in illustration and design.</p>
+
+  <p class="big"> At the moment, I'm trying to learn as much as I can and get myself familiarize with digital art. I hope to improve my portfolio and my personal skills in the course of the next few years of studying.
+
+ <div class="one"></div>
+
+  <address>
+<span>By Nghia Phan</span>
+</address>
+
+
 </body>
-
 </html>
