--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <div>
   <p class="hello"> My name is Nghia Phan and I am an animator. I'm nineteen year old and currently in my second year of college. I just took a web authoring class this semester and here what I got, welcome to my little website.</p>
   <div class="hello1"></div>
-
+</div>
 <h2 id="works">Works</h2>
 
 
 <h3 class="hello2-1">Web authoring</h3>
 
-<p class="hello2-2"> <a href="https://nghiaphan8297.github.io/html-haiku/index.html">Haiku</a> - <a href="https://nghiaphan8297.github.io/tnr/index.html">Font Website</a> - <a href="Code Drawing/index.html">Code Drawing</a> - <a href="Code Animation/index.html">Code Animation</a></p>
+<p class="hello2-2"> <a href="https://nghiaphan8297.github.io/html-haiku/index.html">Haiku</a> - <a href="https://nghiaphan8297.github.io/tnr/index.html">Font Website</a> - <a href="drawing/index.html">Code Drawing</a> - <a href="animation/index.html">Code Animation</a></p>
 
 <img class="work" alt="times new roman" src="picture/tally-of-types.jpg">
 
@@ -48,7 +48,7 @@
 
 
      <h3 class="hello3-1">Animation </h3>
-     <p class="hello2-2"> <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gb050YmhseUhGb1k">3D Interactive<a> - <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gVmotN09TUXRwOFE">Ocean Gyre</a></p>
+     <p class="hello2-2"> <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gb050YmhseUhGb1k">3D Interactive</a> - <a href="https://drive.google.com/open?id=0B6X-QkrOSz8gVmotN09TUXRwOFE">Ocean Gyre</a></p>
 
 
 
@@ -74,7 +74,7 @@
 
   <p class="big">I had high school in Massachusetts, U.S and went to Montserrat College of Art - in the same state. I'm a second-year-college-student and currently working as an animator. I also take interest in illustration and design.</p>
 
-  <p class="big"> At the moment, I'm trying to learn as much as I can and get myself familiarize with digital art. I hope to improve my portfolio and my personal skills in the course of the next few years of studying.
+  <p class="big"> At the moment, I'm trying to learn as much as I can and get myself familiarize with digital art. I hope to improve my portfolio and my personal skills in the course of the next few years of studying.</p>
 
  <div class="one"></div>
 
